<resources>
    <string name="app_name">PokePedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Entrar</string>
    <string name="todos">Todos</string>
    <string name="favoritos">Favoritos</string>
    <string name="entrenador">Entrenador</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="recientes">Recientes</string>
    <string name="logo">Logo</string>
    <string name="pokemon">Pokemon</string>
    <string name="description_empty_image">empty_image</string>
    <string name="empty_fav">No tiene pokemons favoritos</string>
    <string name="empty_resent">No tiene pokemons recientes</string>
    <string name="textBusquedaFallida">El pokemon no se encuentra en la lista principal</string>
    <string name="textBusquedaFallidaFavoritos">El pokemon no se encuentra en la lista tus favoritos</string>
    <string name="empty_evolucion">No tiene evoluciones</string>
    <string name="HintNombrePokemon">El nombre del Pokemon </string>
    <string name="btnBuscar">Buscar</string>
    <string name="imagendetitulo">ImagenDetitulo</string>
    <string name="profile">Perfil</string>
    <string name="logout">Cerrar sesion</string>
</resources>