<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/todos"
        android:id="@+id/listaPrincipalFragment"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom|withText"
        />
    <item android:id="@+id/listaRecientesFragment"
        android:title="@string/recientes"
        android:icon="@drawable/ic_recent"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/listaDeFavoritosFragment"
        android:title="@string/favoritos"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/userFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_account_circle"
        app:showAsAction="ifRoom|withText"/>
</menu>